--- a/CXYO/app/src/main/res/layout/fragment_network.xml
+++ b/CXYO/app/src/main/res/layout/fragment_network.xml
@@ -4,10 +4,21 @@
     android:layout_height="match_parent"
     tools:context="com.yo.cx.cxyo.NetworkFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Network" />
+        android:orientation="vertical">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@+id/network_content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 </FrameLayout>
