--- a/CXYO/app/src/main/res/layout/fragment_recent.xml
+++ b/CXYO/app/src/main/res/layout/fragment_recent.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.yo.cx.cxyo.RecentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="recent" />
+        android:layout_height="wrap_content"
+        android:id="@+id/recent_user_info_list"
+        android:layout_gravity="center_horizontal"
+        android:choiceMode="none" />
 
 </FrameLayout>
