--- a/CXYO/app/src/main/res/layout/fragment_profile.xml
+++ b/CXYO/app/src/main/res/layout/fragment_profile.xml
@@ -55,7 +55,7 @@
             android:id="@+id/layout_purpose_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" />
 
         <Spinner
             android:id="@+id/layout_meeting_spinner"
@@ -66,7 +66,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:id="@+id/editText"
