--- a/CXYO/app/src/main/res/layout/fragment_chat_room.xml
+++ b/CXYO/app/src/main/res/layout/fragment_chat_room.xml
@@ -34,6 +34,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/MessageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.1"/>
@@ -42,33 +43,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.45"
+        android:background="#4c7c77"
         android:orientation="horizontal"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:weightSum="1">
+
 
         <EditText
             android:id="@+id/MessageText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:hint="message" />
-
-        <ImageButton
-            android:id="@+id/SendButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:layout_weight="0.4"
-            app:srcCompat="@drawable/back_arrow" />
+            android:hint="message"
+            android:textColor="@android:color/white" />
 
         <ImageButton
             android:id="@+id/MediaButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent"
             android:layout_weight="0.4"
-            app:srcCompat="@drawable/back_arrow" />
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/media_button" />
+
+        <ImageButton
+            android:id="@+id/SendButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.4"
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/send_button" />
+
 
     </LinearLayout>
 
