--- a/CXYO/app/src/main/res/layout/activity_login.xml
+++ b/CXYO/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
@@ -46,7 +47,19 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/logo" />
 
             <TextView
                 android:id="@+id/textView"
