--- a/CXYO/app/src/main/res/values/colors.xml
+++ b/CXYO/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#1f504b</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#fff</color>
 </resources>
