--- a/CXYO/app/src/main/res/layout/fragment_profile.xml
+++ b/CXYO/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     tools:context="com.yo.cx.cxyo.ProfileFragment">
 
     <LinearLayout
-        android:background="@android:color/white"
+        android:background="@null"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
