--- a/CXYO/app/src/main/res/layout/activity_main.xml
+++ b/CXYO/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
         app:menu="@menu/navigation" />
+        <!--app:itemBackground="@color/colorPrimary"-->
+        <!--app:itemTextColor="@android:color/darker_gray"-->
+
 
 </LinearLayout>
