--- a/CXYO/app/src/main/res/menu/navigation.xml
+++ b/CXYO/app/src/main/res/menu/navigation.xml
@@ -3,19 +3,19 @@
 
     <item
         android:id="@+id/navigation_connect"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_connect"
         android:orderInCategory="0"
         android:title="@string/title_connect" />
 
     <item
         android:id="@+id/navigation_flight_info"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_plane"
         android:orderInCategory="1"
         android:title="@string/title_flight_info" />
 
     <item
         android:id="@+id/navigation_request"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_raise_1"
         android:orderInCategory="2"
         android:title="@string/title_request" />
 
