--- a/CXYO/app/src/main/res/values/colors.xml
+++ b/CXYO/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#1f504b</color>
     <color name="colorPrimaryDark">#1f504b</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#1f504b</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorDarkGrey">#A9A9A9</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
