--- a/CXYO/app/src/main/res/layout/fragment_profile.xml
+++ b/CXYO/app/src/main/res/layout/fragment_profile.xml
@@ -52,17 +52,44 @@
                 android:layout_marginTop="20dp"/>
         </android.support.design.widget.TextInputLayout>
 
-        <Spinner
-            android:id="@+id/layout_purpose_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/purpose"
+                android:layout_width="118dp"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/black"
+                android:inputType="textPersonName"
+                android:text="Purpose" />
+            <Spinner
+                android:id="@+id/layout_purpose_spinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
+        </LinearLayout>
 
-        <Spinner
-            android:id="@+id/layout_meeting_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/interest"
+            android:layout_width="118dp"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/black"
+            android:inputType="textPersonName"
+            android:text="Interest" />
+
+            <Spinner
+                android:id="@+id/layout_meeting_spinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
