--- a/CXYO/app/src/main/res/layout/fragment_request.xml
+++ b/CXYO/app/src/main/res/layout/fragment_request.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RequestLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yo.cx.cxyo.RequestFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.yo.cx.cxyo.RequestFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -14,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/request_back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00000000"
@@ -24,10 +25,10 @@
             android:id="@+id/editText3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="23.26"
             android:ems="10"
-            android:inputType="textShortMessage"
-            android:text="Type your request here"
-            android:layout_weight="23.26" />
+            android:hint="Type your request here"
+            android:inputType="textShortMessage" />
 
         <Button
             android:id="@+id/button4"
