--- a/CXYO/app/src/main/res/layout/fragment_connect.xml
+++ b/CXYO/app/src/main/res/layout/fragment_connect.xml
@@ -46,7 +46,7 @@
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_setting"
+                android:src="@drawable/ic_user"
                 android:tint="@android:color/darker_gray"/>
 
 
