--- a/CXYO/app/src/main/res/layout/fragment_flight_info.xml
+++ b/CXYO/app/src/main/res/layout/fragment_flight_info.xml
@@ -13,27 +13,85 @@
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="20dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:layout_marginBottom="20dp"
             app:srcCompat="@android:color/darker_gray" />
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/flight_no"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textSize="30dp"
+            android:layout_margin="15dp"
+            android:text="Flight No"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:text="Flight Info:"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="0.4">
+                <TextView
+                    android:id="@+id/from_loc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textSize="60dp"
+                    android:textAllCaps="true"
+                    android:layout_weight="0.4"
+                    android:text="LOC"/>
+                <TextView
+                    android:id="@+id/from_long_loc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textAllCaps="true"
+                    android:layout_weight="0.8"
+                    android:text="Long"/>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:src="@drawable/ic_arrow"
+                android:gravity="center"
+                android:text="ICON"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:text="Flight Info:"/>
+
+                android:orientation="vertical"
+                android:textSize="60dp"
+                android:layout_weight="0.4">
+                <TextView
+                    android:id="@+id/to_loc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textAllCaps="true"
+                    android:textSize="60dp"
+                    android:layout_weight="0.4"
+                    android:text="LOC"/>
+                <TextView
+                    android:id="@+id/to_long_loc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:layout_weight="0.8"
+                    android:text="Long"/>
+
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
