--- a/CXYO/app/src/main/res/layout/fragment_game.xml
+++ b/CXYO/app/src/main/res/layout/fragment_game.xml
@@ -4,10 +4,43 @@
     android:layout_height="match_parent"
     tools:context="com.yo.cx.cxyo.GameFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="game" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/border"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/asia_miles" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="100,000"
+                android:textSize="25dp" />
+
+        </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/game_info_list"
+            android:layout_gravity="center_horizontal"
+            android:choiceMode="none" />
+
+    </LinearLayout>
+
 
 </FrameLayout>
