--- a/CXYO/app/src/main/res/layout/fragment_request.xml
+++ b/CXYO/app/src/main/res/layout/fragment_request.xml
@@ -12,14 +12,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/request_back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00000000"
-            app:srcCompat="@drawable/back_arrow" />
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:paddingEnd="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp">
 
         <EditText
             android:id="@+id/editText3"
@@ -30,12 +28,13 @@
             android:hint="Type your request here"
             android:inputType="textShortMessage" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Submit" />
+            android:background="@android:color/transparent"
+            android:src="@drawable/send_button" />
 
     </LinearLayout>
 
