--- a/CXYO/app/src/main/res/layout/fragment_discuss.xml
+++ b/CXYO/app/src/main/res/layout/fragment_discuss.xml
@@ -8,28 +8,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="200dp"
+        android:weightSum="1"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/InFlightMeal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="0.4"
             android:background="@android:color/transparent"
-            android:padding="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/rating_before" />
 
         <ImageButton
             android:id="@+id/LongTermTopic"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="0.30"
             android:background="@android:color/transparent"
-            android:padding="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/long_term_topic" />
+
+        <ImageButton
+            android:id="@+id/random_post"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.30"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/random_post" />
 
     </LinearLayout>
 
