--- a/CXYO/app/src/main/res/layout/fragment_forum.xml
+++ b/CXYO/app/src/main/res/layout/fragment_forum.xml
@@ -29,22 +29,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="100dp"
+            android:weightSum="1"
             android:orientation="vertical">
 
             <ImageButton
                 android:id="@+id/AttractionsRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/attractions_rating_before" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:layout_weight="0.235"
+                android:scaleType="fitCenter"
+                android:src="@drawable/attractions_rating_before" />
 
             <ImageButton
-                android:id="@+id/ForumPost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/forum_post" />
+                android:id="@+id/ForumPost1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.38"
+                android:background="@android:color/transparent"
+                android:cropToPadding="false"
+                android:scaleType="fitCenter"
+                android:src="@drawable/comment_1" />
+
+
+            <ImageButton
+                android:id="@+id/ForumPost2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.375"
+                android:background="@android:color/transparent"
+                android:cropToPadding="false"
+                android:scaleType="fitCenter"
+                android:src="@drawable/comment_2" />
+
 
         </LinearLayout>
 
