--- a/CXYO/app/src/main/res/layout/fragment_shopping.xml
+++ b/CXYO/app/src/main/res/layout/fragment_shopping.xml
@@ -10,5 +10,6 @@
     <GridView
         android:id="@+id/recommendation_grid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 </FrameLayout>
