--- a/CXYO/app/src/main/res/layout/fragment_shopping.xml
+++ b/CXYO/app/src/main/res/layout/fragment_shopping.xml
@@ -11,5 +11,5 @@
         android:id="@+id/recommendation_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:numColumns="3"/>
 </FrameLayout>
