--- a/CXYO/app/src/main/res/layout/fragment_flight_info.xml
+++ b/CXYO/app/src/main/res/layout/fragment_flight_info.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                app:srcCompat="@android:color/darker_gray" />
+                android:background="@android:color/transparent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
