--- a/CXYO/app/src/main/res/layout/list_frequent_request.xml
+++ b/CXYO/app/src/main/res/layout/list_frequent_request.xml
@@ -13,12 +13,14 @@
 
         <ImageView
             android:id="@+id/request_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.2"
             android:minHeight="50dp"
-            android:scaleType="fitCenter" />
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:tint="#1f504b"/>
 
         <LinearLayout
             android:layout_width="match_parent"
