--- a/CXYO/app/src/main/res/layout/activity_login.xml
+++ b/CXYO/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
+                    android:text="reneeleung@cxhack.com"
                     android:inputType="textEmailAddress"
                     android:textColor="@android:color/white"
                     android:maxLines="1"/>
@@ -96,6 +97,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
+                    android:text="password123!"
                     android:imeActionId="@+id/login"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
