--- a/CXYO/app/src/main/res/layout/activity_main2.xml
+++ b/CXYO/app/src/main/res/layout/activity_main2.xml
@@ -50,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Display Name"
+                android:text="Renee"
                 android:imeActionId="@+id/login"
                 android:imeOptions="actionUnspecified"
                 android:textColor="@android:color/white"
@@ -65,6 +66,7 @@
             android:layout_marginTop="20dp"
             android:textColor="@android:color/white"
             app:buttonTint="@android:color/white"
+            android:checked="true"
             android:theme="@style/checkBoxStyle"
             android:text="Share my profile"
             android:layout_above="@+id/button"
